# slopometry

./: .coverage  .env.example  .env.solo.example  .env.summoner.example  .gitignore  CLAUDE.md  LICENSE.txt  README.md  SPONSORS.md  THIRD_PARTY_NOTICES.md  coverage.xml  domain-refactoring.rfc  main.py  previous_profile.json  profile.json  pyproject.toml
.github/workflows/: ci.yml
docs/: claude-hooks-doc.md  summoner.md  text-ai-coding-tools.md
plugins/opencode/: README.md  index.ts  package.json
reproduce_complexity/: test.py
scripts/: profile_current_impact.sh
src/slopometry/: __init__.py  __main__.py  cli.py  cli_calculator.py  complexity_analyzer.py  database.py  experiment_orchestrator.py  git_tracker.py  hook_handler.py  llm_wrapper.py  models.py  plan_analyzer.py  project_tracker.py  settings.py  worktree_manager.py
src/slopometry/core/: __init__.py  code_analyzer.py  code_quality_cache.py  compact_analyzer.py  complexity_analyzer.py  context_coverage_analyzer.py  coverage_analyzer.py  database.py  display_models.py  git_tracker.py  hook_handler.py  language_config.py  language_detector.py  language_guard.py  language_models.py  lock.py  migrations.py  models.py  opencode_handler.py  plan_analyzer.py  project_guard.py  project_tracker.py  python_feature_analyzer.py  settings.py  tokenizer.py  transcript_token_analyzer.py  working_tree_extractor.py  working_tree_state.py
src/slopometry/core/models/: __init__.py  baseline.py  complexity.py  core.py  display.py  experiment.py  hook.py  opencode.py  session.py  smell.py  user_story.py
src/slopometry/display/: __init__.py  console.py  formatters.py
src/slopometry/solo/: __init__.py
src/slopometry/solo/cli/: __init__.py  commands.py
src/slopometry/solo/services/: __init__.py  hook_service.py  session_service.py
src/slopometry/stubs/: rust_code_analysis.pyi
src/slopometry/summoner/: __init__.py
src/slopometry/summoner/cli/: __init__.py  commands.py
src/slopometry/summoner/services/: __init__.py  baseline_service.py  cli_calculator.py  current_impact_service.py  dataset_service.py  experiment_orchestrator.py  experiment_service.py  hf_uploader.py  impact_calculator.py  implementation_comparator.py  llm_service.py  llm_wrapper.py  nfp_service.py  qpe_calculator.py  user_story_service.py
tests/: conftest.py  test_baseline_service.py  test_cli.py  test_cli_calculator.py  test_code_analyzer.py  test_code_quality_cache.py  test_compact_analyzer.py  test_complexity_analyzer.py  test_context_coverage_analyzer.py  test_coverage_analyzer.py  test_current_impact_service.py  test_database.py  test_dataset_export.py  test_experiment_orchestrator.py  test_experiment_tracking.py  test_feedback_cache.py  test_galen_metrics.py  test_git_tracker.py  test_hf_uploader.py  test_hook_handler.py  test_hook_service.py  test_impact_calculator.py  test_implementation_comparator.py  test_language_config.py  test_language_guard.py  test_list_sessions_performance.py  test_llm_integration.py  test_llm_wrapper.py  test_lock.py  test_migrations.py  test_models.py  test_notebookread_integration.py  test_opencode_handler.py  test_plan_analyzer.py  test_posttooluse_validation.py  test_project_guard.py  test_project_tracker.py  test_python_feature_analyzer.py  test_python_feature_analyzer_ext.py  test_qpe_calculator.py  (+12 more)
tests/fixtures/: .coverage  coverage.xml  coverage_flat.xml  transcript.jsonl
