[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopometry"
version = "20260125-2"
description = "Opinionated code quality metrics for code agents and humans"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "TensorTemplar", email = "ghp.rectify565@passinbox.com"},
]
license = {text = "MIT"}
keywords = ["claude", "code", "tracking", "metrics", "hooks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlite-utils>=3.0",
    "radon>=6.0.1",
    "toml>=0.10.2",
    "pydantic-ai>=1.33.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
    "coverage>=7.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.244",
    "isort>=5.12.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "types-toml>=0.10.8.20240310",
    "pyrefly>=0.46.0",
]

[project.urls]
Homepage = "https://github.com/TensorTemplar/slopometry"
Repository = "https://github.com/TensorTemplar/slopometry.git"
Issues = "https://github.com/TensorTemplar/slopometry/issues"


[project.scripts]
slopometry = "slopometry.cli:cli"

[tool.ruff]
lint.select = ["I", "F", "UP"]
lint.ignore = []
line-length = 120
target-version = "py313"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
force_grid_wrap = 2

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = [
    "--cov=slopometry",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-v",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/slopometry"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/cli.py",  # CLI is interactive and hard to test
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pyrefly]
search_path = ["src", "tests"]
